Chaning Developer to METS and litsing developers in the POM file

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,15 @@
     <name>UgandaemrSync</name>
     <description>no description</description>
 
+    <developers>
+        <developer>
+            <name>Charles Olupot</name>
+        </developer>
+        <developer>
+            <name>Samuel Lubwama</name>
+        </developer>
+    </developers>
+
     <url>https://wiki.openmrs.org/x/FQ4z</url>
 
     <scm>
