Adding Viral Load Upload Screen Adding Sync Task Log Enable Recieving of Viral Load Results. Simplifying The Mapper for InputStream

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -52,6 +52,14 @@
             <groupId>org.openmrs.api</groupId>
             <artifactId>openmrs-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>metadatadeploy-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>dataexchange-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
