--- a/api/pom.xml
+++ b/api/pom.xml
@@ -60,6 +60,11 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>dataexchange-api</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>metadatasharing-api</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
