--- a/pom.xml
+++ b/pom.xml
@@ -155,12 +155,6 @@
             </dependency>
 
             <dependency>
-                <groupId>org.openmrs.module</groupId>
-                <artifactId>dataexchange-api</artifactId>
-                <version>${metadataexchangeVersion}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
                 <artifactId>httpmime</artifactId>
                 <version>4.5</version>
@@ -227,7 +221,15 @@
                 <type>jar</type>
                 <scope>test</scope>
             </dependency>
+            <dependency>
+                <groupId>org.openmrs.web</groupId>
+                <artifactId>openmrs-web</artifactId>
+                <version>${openMRSVersion}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
+
+
 
     </dependencyManagement>
 
@@ -389,7 +391,7 @@
         <serialization.xstreamVersion>0.2.14</serialization.xstreamVersion>
         <metadatadeployVersion>1.10.0</metadatadeployVersion>
         <metadatasharingVersion>1.5.0</metadatasharingVersion>
-        <metadatamappingVersion>1.0.2</metadatamappingVersion>
+        <metadatamappingVersion>1.3.4</metadatamappingVersion>
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
     </properties>
 </project>
