--- a/pom.xml
+++ b/pom.xml
@@ -112,6 +112,7 @@
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>20160810</version>
+                <type>jar</type>
             </dependency>
 
             <dependency>
