--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>ugandaemrsync</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.7-SNAPSHOT</version>
     </parent>
 
     <artifactId>ugandaemrsync-omod</artifactId>
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>ugandaemrsync-api</artifactId>
-            <version>1.0.6</version>
+            <version>1.0.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.openmrs.web</groupId>
