--- a/api/pom.xml
+++ b/api/pom.xml
@@ -101,6 +101,10 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>uiframework-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>fhir2-api</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
