--- a/pom.xml
+++ b/pom.xml
@@ -213,6 +213,13 @@
                 <version>${uiframeworkModuleVersion}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>fhir2-api</artifactId>
+                <version>1.1.0</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
