--- a/pom.xml
+++ b/pom.xml
@@ -217,7 +217,7 @@
             <dependency>
                 <groupId>org.openmrs.module</groupId>
                 <artifactId>fhir2-api</artifactId>
-                <version>1.1.0</version>
+                <version>${fhir2ModuleVersion}</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
@@ -385,5 +385,6 @@
         <metadatamappingVersion>1.3.4</metadatamappingVersion>
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
         <uiframeworkModuleVersion>3.6</uiframeworkModuleVersion>
+        <fhir2ModuleVersion>1.1.0</fhir2ModuleVersion>
     </properties>
 </project>
