--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -22,6 +22,10 @@
             <version>1.0.10-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>reporting-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.openmrs.web</groupId>
             <artifactId>openmrs-web</artifactId>
             <type>jar</type>
@@ -44,6 +48,10 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>appui-omod</artifactId>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>calculation-api</artifactId>
         </dependency>
     </dependencies>
 
