--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>ugandaemrsync-api</artifactId>
-            <version>1.0.10-SNAPSHOT</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openmrs.module</groupId>
