--- a/pom.xml
+++ b/pom.xml
@@ -385,6 +385,7 @@
         <metadatamappingVersion>1.3.4</metadatamappingVersion>
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
         <uiframeworkModuleVersion>3.6</uiframeworkModuleVersion>
-        <fhir2ModuleVersion>1.1.0</fhir2ModuleVersion>
+        <fhir2ModuleVersion>1.2.2</fhir2ModuleVersion>
+        <cohortModuleVersion>3.0.0-SNAPSHOT</cohortModuleVersion>
     </properties>
 </project>
