--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,13 @@
                 <version>${fhir2ModuleVersion}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombokVersion}</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
 
     </dependencyManagement>
@@ -352,5 +359,6 @@
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
         <uiframeworkModuleVersion>3.6</uiframeworkModuleVersion>
         <fhir2ModuleVersion>1.2.2</fhir2ModuleVersion>
+        <lombokVersion>1.18.16</lombokVersion>
     </properties>
 </project>
