--- a/pom.xml
+++ b/pom.xml
@@ -186,7 +186,44 @@
                 <version>${fhir2ModuleVersion}</version>
                 <scope>provided</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>webservices.rest-omod</artifactId>
+                <version>${webservices.restModuleVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>webservices.rest-omod-common</artifactId>
+                <version>${webservices.restModuleVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>webservices.rest-omod-1.10</artifactId>
+                <version>${webservices.restModuleVersion}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>webservices.rest-omod-2.0</artifactId>
+                <version>${webservices.restModuleVersion}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>webservices.rest-omod-2.1</artifactId>
+                <version>${webservices.restModuleVersion}</version>
+                <scope>test</scope>
+            </dependency>
         </dependencies>
+
+
 
     </dependencyManagement>
 
@@ -352,5 +389,6 @@
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
         <uiframeworkModuleVersion>3.6</uiframeworkModuleVersion>
         <fhir2ModuleVersion>1.2.2</fhir2ModuleVersion>
+        <webservices.restModuleVersion>2.28.0</webservices.restModuleVersion>
     </properties>
 </project>
