--- a/pom.xml
+++ b/pom.xml
@@ -215,6 +215,13 @@
                 <version>${webservices.restModuleVersion}</version>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>${lombokVersion}</version>
+                <scope>provided</scope>
+            </dependency>
         </dependencies>
 
 
@@ -384,5 +391,6 @@
         <uiframeworkModuleVersion>3.6</uiframeworkModuleVersion>
         <fhir2ModuleVersion>1.2.2</fhir2ModuleVersion>
         <webservices.restModuleVersion>2.28.0</webservices.restModuleVersion>
+        <lombokVersion>1.18.16</lombokVersion>
     </properties>
 </project>
