Intergrate with eayfa

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -106,6 +106,10 @@
             <artifactId>fhir2-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>idgen-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
