--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -40,6 +40,10 @@
 
         <dependency>
             <groupId>org.openmrs.module</groupId>
+            <artifactId>idgen-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
             <artifactId>uiframework-omod</artifactId>
             <scope>provided</scope>
         </dependency>
