--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,13 @@
             </dependency>
 
             <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>idgen-api</artifactId>
+                <version>${idgenVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>${lombokVersion}</version>
@@ -227,6 +234,7 @@
                 <artifactId>ibatis-core</artifactId>
                 <version>${ibatisVersion}</version>
             </dependency>
+
         </dependencies>
 
 
@@ -390,6 +398,7 @@
         <calculationVersion>1.1</calculationVersion>
         <serialization.xstreamVersion>0.2.14</serialization.xstreamVersion>
         <metadatadeployVersion>1.10.0</metadatadeployVersion>
+        <idgenVersion>4.5.0</idgenVersion>
         <metadatasharingVersion>1.5.0</metadatasharingVersion>
         <metadatamappingVersion>1.3.4</metadatamappingVersion>
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
