--- a/pom.xml
+++ b/pom.xml
@@ -170,7 +170,7 @@
             <dependency>
                 <groupId>org.openmrs.module</groupId>
                 <artifactId>uiframework-api</artifactId>
-                <version>${uiframeworkModuleVersion}</version>
+                <version>${uiframeworkVersion}</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -397,7 +397,7 @@
     <properties>
         <openMRSVersion>2.0.6</openMRSVersion>
         <appuiVersion>1.7</appuiVersion>
-        <uiframeworkVersion>3.15.0</uiframeworkVersion>
+        <uiframeworkVersion>3.22.0</uiframeworkVersion>
         <ugandaemrReportsVersion>2.0.32</ugandaemrReportsVersion>
         <reportingVersion>1.20.0</reportingVersion>
         <calculationVersion>1.1</calculationVersion>
@@ -407,7 +407,6 @@
         <metadatasharingVersion>1.5.0</metadatasharingVersion>
         <metadatamappingVersion>1.3.4</metadatamappingVersion>
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
-        <uiframeworkModuleVersion>3.6</uiframeworkModuleVersion>
         <fhir2ModuleVersion>1.9.0</fhir2ModuleVersion>
         <webservices.restModuleVersion>2.28.0</webservices.restModuleVersion>
         <lombokVersion>1.18.20</lombokVersion>
