--- a/pom.xml
+++ b/pom.xml
@@ -417,7 +417,7 @@
         <openMRSVersion>2.0.5</openMRSVersion>
         <appuiVersion>1.7</appuiVersion>
         <uiframeworkVersion>3.22.0</uiframeworkVersion>
-        <ugandaemrReportsVersion>2.0.38-SNAPSHOT</ugandaemrReportsVersion>
+        <ugandaemrReportsVersion>2.1.1</ugandaemrReportsVersion>
         <reportingVersion>1.20.0</reportingVersion>
         <reportingCompatibilityVersion>2.0.9</reportingCompatibilityVersion>
         <calculationVersion>1.1</calculationVersion>
