--- a/pom.xml
+++ b/pom.xml
@@ -185,6 +185,16 @@
                 <artifactId>fhir2-api</artifactId>
                 <version>${fhir2ModuleVersion}</version>
                 <scope>provided</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.openmrs.module</groupId>
+                        <artifactId>integration-tests-2.1</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.openmrs.module</groupId>
+                        <artifactId>integration-tests-2.2</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <dependency>
@@ -416,21 +426,21 @@
     </pluginRepositories>
 
     <properties>
-        <openMRSVersion>2.0.5</openMRSVersion>
-        <appuiVersion>1.7</appuiVersion>
-        <uiframeworkVersion>3.22.0</uiframeworkVersion>
+        <openMRSVersion>2.6.3</openMRSVersion>
+        <appuiVersion>1.17.0</appuiVersion>
+        <uiframeworkVersion>3.24.0</uiframeworkVersion>
         <ugandaemrReportsVersion>2.1.3</ugandaemrReportsVersion>
-        <reportingVersion>1.20.0</reportingVersion>
+        <reportingVersion>1.25.0</reportingVersion>
         <reportingCompatibilityVersion>2.0.9</reportingCompatibilityVersion>
-        <calculationVersion>1.1</calculationVersion>
-        <serialization.xstreamVersion>0.2.14</serialization.xstreamVersion>
-        <metadatadeployVersion>1.10.0</metadatadeployVersion>
-        <idgenVersion>4.5.0</idgenVersion>
-        <metadatasharingVersion>1.5.0</metadatasharingVersion>
-        <metadatamappingVersion>1.3.4</metadatamappingVersion>
+        <calculationVersion>1.3.0</calculationVersion>
+        <serialization.xstreamVersion>0.2.16</serialization.xstreamVersion>
+        <metadatadeployVersion>1.13.0</metadatadeployVersion>
+        <idgenVersion>4.10.0</idgenVersion>
+        <metadatasharingVersion>1.9.0</metadatasharingVersion>
+        <metadatamappingVersion>1.6.0</metadatamappingVersion>
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
-        <fhir2ModuleVersion>1.9.0</fhir2ModuleVersion>
-        <webservices.restModuleVersion>2.28.0</webservices.restModuleVersion>
+        <fhir2ModuleVersion>2.2.0</fhir2ModuleVersion>
+        <webservices.restModuleVersion>2.40.0</webservices.restModuleVersion>
         <lombokVersion>1.18.20</lombokVersion>
         <ibatisVersion>3.0</ibatisVersion>
     </properties>
