--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,23 +9,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Check out the code
+        uses: actions/checkout@v3
 
-      # Check out the code
-      - uses: actions/checkout@v2
-
-        # Enable caching of Maven dependencies to speed up job execution.  See https://github.com/actions/cache
-      - uses: actions/cache@v3
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-        # Set up Java 1.8 with Maven
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
 
-        # Execute the Maven verify command to compile, package, test, verify
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'  # More reliable OpenJDK distribution
+          java-version: '8'
+
+      - name: Build and Test with Maven
+        run: mvn clean verify
