--- a/.github/workflows/deploy-snapshots.yml
+++ b/.github/workflows/deploy-snapshots.yml
@@ -12,28 +12,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      # Check out the code
-      - uses: actions/checkout@v2
+      - name: Check out the code
+        uses: actions/checkout@v3
 
-        # Enable caching of Maven dependencies to speed up job execution.  See https://github.com/actions/cache
-      - uses: actions/cache@v1
+      - name: Cache Maven dependencies
+        uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
-        # Set up Java 1.8 with Maven including a .m2/settings.xml file.  See https://github.com/actions/setup-java
-      - name: Set up JDK 1.8 and Maven settings file
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-          server-id: openmrs-repo-snapshots
-          server-username: secret_BINTRAY_USERNAME
-          server-password: secret_BINTRAY_PASSWORD
 
-      # Execute the Maven deploy command to compile, package, test, verify, and publish to SNAPSHOT repository
-      - name: Maven Deploy
+      - name: Set up JDK 1.8 and Maven settings file
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'  
+          java-version: '8'
+          server-id: openmrs-repo-snapshots
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+
+      - name: Deploy to Snapshot Repository
         run: mvn -B deploy --file pom.xml
         env:
-          secret_BINTRAY_USERNAME: ${{ secrets.BINTRAY_USERNAME }}
-          secret_BINTRAY_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
+          MAVEN_USERNAME: ${{ secrets.BINTRAY_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.BINTRAY_PASSWORD }}
