--- a/api/pom.xml
+++ b/api/pom.xml
@@ -111,6 +111,10 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>idgen-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>stockmanagement-api</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
