U4X-883 Sync Requisition of Stock from UgandaEMR to eAFYA

--- a/pom.xml
+++ b/pom.xml
@@ -258,6 +258,12 @@
                 <artifactId>stockmanagement-api</artifactId>
                 <version>${stockmanagementVersion}</version>
                 <scope>provided</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>servlet-api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
         </dependencies>
     </dependencyManagement>
