--- a/pom.xml
+++ b/pom.xml
@@ -253,10 +253,19 @@
                 <artifactId>ibatis-core</artifactId>
                 <version>${ibatisVersion}</version>
             </dependency>
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>stockmanagement-api</artifactId>
+                <version>${stockmanagementVersion}</version>
+                <scope>provided</scope>
+                <exclusions>
+                    <exclusion>
+                        <groupId>javax.servlet</groupId>
+                        <artifactId>servlet-api</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
         </dependencies>
-
-
-
     </dependencyManagement>
 
     <build>
@@ -426,5 +435,6 @@
         <fhir2ModuleVersion>2.3.0</fhir2ModuleVersion>
         <webservices.restModuleVersion>2.47.0</webservices.restModuleVersion>
         <ibatisVersion>3.0</ibatisVersion>
+        <stockmanagementVersion>1.4.4</stockmanagementVersion>
     </properties>
 </project>
