--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,15 +10,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
-
-      - name: Verify Clean Git State
-        run: |
-          git status
-          if [[ -n $(git status --porcelain) ]]; then
-            echo "Git working directory is not clean. Exiting..."
-            exit 1
-          fi
+          fetch-depth: 0  # Ensures full history for Maven release plugin
 
       - name: Set Up JDK 8
         uses: actions/setup-java@v3
@@ -31,9 +23,18 @@ jobs:
           gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
           gpg-passphrase: GPG_PASSPHRASE
 
+      - name: Debug Secrets
+        run: |
+          if [ -z "${{ secrets.GPG_PRIVATE_KEY }}" ]; then
+            echo "ERROR: GPG_PRIVATE_KEY is empty!"
+            exit 1
+          else
+            echo "GPG key is set."
+          fi
+
       - name: Configure GPG Key
         run: |
-          echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import --import-options import-show
+          echo "${{ secrets.GPG_PRIVATE_KEY }}" | base64 --decode | gpg --batch --import
           echo "allow-loopback-pinentry" >> ~/.gnupg/gpg-agent.conf
           gpgconf --reload gpg-agent
 
@@ -42,16 +43,12 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Check Release Version
-        run: mvn help:evaluate -Dexpression=project.version -q -DforceStdout
-
       - name: Release with Maven
-        run: mvn -B release:prepare release:perform -Darguments="-Dmaven.javadoc.skip=true" -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}
+        run: mvn -B release:prepare release:perform -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
 
       - name: Push Changes
-        if: success()
         run: git push --follow-tags origin main
