--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Ensures full history for Maven release plugin
+          fetch-depth: 0
 
       - name: Set Up JDK 8
         uses: actions/setup-java@v3
@@ -20,31 +20,14 @@ jobs:
           server-id: openmrs-repo-modules
           server-username: SONATYPE_USERNAME
           server-password: SONATYPE_PASSWORD
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          gpg-passphrase: GPG_PASSPHRASE
-
-      - name: Debug Secrets
-        run: |
-          if [ -z "${{ secrets.GPG_PRIVATE_KEY }}" ]; then
-            echo "ERROR: GPG_PRIVATE_KEY is empty!"
-            exit 1
-          else
-            echo "GPG key is set."
-          fi
-
-      - name: Configure GPG Key
-        run: |
-          echo "${{ secrets.GPG_PRIVATE_KEY }}" | base64 --decode | gpg --batch --import
-          echo "allow-loopback-pinentry" >> ~/.gnupg/gpg-agent.conf
-          gpgconf --reload gpg-agent
 
       - name: Set Git User
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
 
-      - name: Release with Maven
-        run: mvn -B release:prepare release:perform -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }}
+      - name: Release with Maven (Skipping GPG)
+        run: mvn -B release:prepare release:perform -Dgpg.skip=true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
