--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
           git config --global user.email "actions@github.com"
 
       - name: Release with Maven (Skipping GPG)
-        run: mvn -B release:prepare release:perform -Dgpg.skip=true
+        run: mvn -B release:prepare release:perform -Dgpg.skip=true -Darguments="-Dmaven.javadoc.skip=true"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
