--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.openmrs.module</groupId>
     <artifactId>ugandaemrsync</artifactId>
-    <version>1.3.11</version>
+    <version>1.3.12-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>UgandaemrSync</name>
     <description>Provides data sharing capabilities from the facility level installation with other systems</description>
@@ -28,7 +28,7 @@
         <connection>scm:git:git@github.com:mohuganda/openmrs-module-ugandaemr-sync.git</connection>
         <developerConnection>scm:git:git@github.com:mohuganda/openmrs-module-ugandaemr-sync.git</developerConnection>
         <url>scm:git:https://github.com/mohuganda/openmrs-module-ugandaemr-sync/</url>
-        <tag>1.3.11</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <modules>
