--- a/api/pom.xml
+++ b/api/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>ugandaemrsync</artifactId>
-        <version>1.3.12</version>
+        <version>1.3.13-SNAPSHOT</version>
     </parent>
 
     <artifactId>ugandaemrsync-api</artifactId>
