--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>ugandaemrsync</artifactId>
-        <version>1.3.14-SNAPSHOT</version>
+        <version>1.3.14</version>
     </parent>
 
     <artifactId>ugandaemrsync-omod</artifactId>
