--- a/pom.xml
+++ b/pom.xml
@@ -159,10 +159,30 @@
                 <type>jar</type>
                 <scope>test</scope>
             </dependency>
-
             <dependency>
                 <groupId>org.openmrs.module</groupId>
                 <artifactId>fhir2-api</artifactId>
+                <version>${fhir2ModuleVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>fhir2-api-2.5</artifactId>
+                <version>${fhir2ModuleVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>fhir2-api-2.6</artifactId>
+                <version>${fhir2ModuleVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>fhir2-api-2.7</artifactId>
                 <version>${fhir2ModuleVersion}</version>
                 <scope>provided</scope>
             </dependency>
@@ -399,7 +419,7 @@
     </pluginRepositories>
 
     <properties>
-        <openMRSVersion>2.7.0</openMRSVersion>
+        <openMRSVersion>2.7.4</openMRSVersion>
         <ugandaemrReportsVersion>2.1.3</ugandaemrReportsVersion>
         <reportingVersion>1.25.0</reportingVersion>
         <reportingCompatibilityVersion>2.0.9</reportingCompatibilityVersion>
@@ -410,7 +430,7 @@
         <metadatasharingVersion>1.9.0</metadatasharingVersion>
         <metadatamappingVersion>1.6.0</metadatamappingVersion>
         <metadataexchangeVersion>1.3.3</metadataexchangeVersion>
-        <fhir2ModuleVersion>2.3.0</fhir2ModuleVersion>
+        <fhir2ModuleVersion>2.5.0</fhir2ModuleVersion>
         <webservices.restModuleVersion>2.47.0</webservices.restModuleVersion>
         <ibatisVersion>3.0</ibatisVersion>
         <stockmanagementVersion>1.4.4</stockmanagementVersion>
