--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.openmrs.module</groupId>
         <artifactId>ugandaemrsync</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>1.3.15-SNAPSHOT</version>
     </parent>
 
     <artifactId>ugandaemrsync-omod</artifactId>
@@ -54,6 +54,18 @@
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>idgen-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>uiframework-omod</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.openmrs.module</groupId>
+            <artifactId>appui-omod</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
