--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
     <groupId>org.openmrs.module</groupId>
     <artifactId>ugandaemrsync</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.3.15-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>UgandaemrSync</name>
     <description>Provides data sharing capabilities from the facility level installation with other systems</description>
@@ -88,6 +88,13 @@
             </dependency>
 
             <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>appui-omod</artifactId>
+                <version>${appuiVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>20231013</version>
@@ -136,6 +143,12 @@
             </dependency>
             <dependency>
                 <groupId>org.openmrs.module</groupId>
+                <artifactId>uiframework-omod</artifactId>
+                <version>${uiframeworkVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
                 <artifactId>calculation-api</artifactId>
                 <version>${calculationVersion}</version>
                 <scope>provided</scope>
@@ -159,6 +172,14 @@
                 <type>jar</type>
                 <scope>test</scope>
             </dependency>
+
+            <dependency>
+                <groupId>org.openmrs.module</groupId>
+                <artifactId>uiframework-api</artifactId>
+                <version>${uiframeworkVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+
             <dependency>
                 <groupId>org.openmrs.module</groupId>
                 <artifactId>fhir2-api</artifactId>
@@ -420,6 +441,8 @@
 
     <properties>
         <openMRSVersion>2.7.4</openMRSVersion>
+        <appuiVersion>1.17.0</appuiVersion>
+        <uiframeworkVersion>3.24.0</uiframeworkVersion>
         <ugandaemrReportsVersion>2.1.3</ugandaemrReportsVersion>
         <reportingVersion>1.25.0</reportingVersion>
         <reportingCompatibilityVersion>2.0.9</reportingCompatibilityVersion>
