--- a/omod/pom.xml
+++ b/omod/pom.xml
@@ -84,6 +84,10 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>ugandaemrreports-omod</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
