--- a/api/pom.xml
+++ b/api/pom.xml
@@ -121,6 +121,10 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>stockmanagement-api</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <resources>
