--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,7 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
             <dependency>
                 <groupId>org.openmrs.module</groupId>
                 <artifactId>calculation-api</artifactId>
@@ -270,6 +271,11 @@
                         <artifactId>servlet-api</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jaksonVersion}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -440,5 +446,6 @@
         <webservices.restModuleVersion>2.47.0</webservices.restModuleVersion>
         <ibatisVersion>3.0</ibatisVersion>
         <stockmanagementVersion>1.4.4</stockmanagementVersion>
+        <jaksonVersion>2.18.2</jaksonVersion>
     </properties>
 </project>
