--- a/api/pom.xml
+++ b/api/pom.xml
@@ -51,11 +51,6 @@
             <groupId>org.openmrs.module</groupId>
             <artifactId>reportingcompatibility-api</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.openmrs.module</groupId>
-            <artifactId>ugandaemrreports-api</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>reporting-api</artifactId>
@@ -120,6 +115,14 @@
         <dependency>
             <groupId>org.openmrs.module</groupId>
             <artifactId>stockmanagement-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
