--- a/pom.xml
+++ b/pom.xml
@@ -119,18 +119,6 @@
             </dependency>
             <dependency>
                 <groupId>org.openmrs.module</groupId>
-                <artifactId>ugandaemrreports-api</artifactId>
-                <version>${ugandaemrReportsVersion}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.openmrs.module</groupId>
-                <artifactId>ugandaemrreports-omod</artifactId>
-                <version>${ugandaemrReportsVersion}</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.openmrs.module</groupId>
                 <artifactId>reporting-api</artifactId>
                 <version>${reportingVersion}</version>
                 <scope>provided</scope>
@@ -272,10 +260,24 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-core</artifactId>
+                <version>${jaksonVersion}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jaksonVersion}</version>
+                <scope>provided</scope>
+            </dependency>
             <dependency>
                 <groupId>com.fasterxml.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
                 <version>${jaksonVersion}</version>
+                <scope>provided</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -433,7 +435,7 @@
     <properties>
         <openMRSVersion>2.7.4</openMRSVersion>
         <ugandaemrReportsVersion>2.1.3</ugandaemrReportsVersion>
-        <reportingVersion>1.25.0</reportingVersion>
+        <reportingVersion>1.27.0</reportingVersion>
         <reportingCompatibilityVersion>2.0.9</reportingCompatibilityVersion>
         <calculationVersion>1.3.0</calculationVersion>
         <serialization.xstreamVersion>0.2.16</serialization.xstreamVersion>
